<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_background_gradient" >

    <TextView
        android:text="@string/onboarding_workout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center"
        style="@style/OnBoardingTextLight.Title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/onboarding_workout_schedule_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            style="@style/OnBoardingTextLight"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/todays_schedule_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_add_white_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/onboarding_workout_schedule_tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:gravity="center_horizontal"
            style="@style/OnBoardingTextLight"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/in1days_schedule_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/onboarding_workout_schedule_wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:gravity="center_horizontal"
            style="@style/OnBoardingTextLight"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/in2days_schedule_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/onboarding_workout_schedule_thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:gravity="center_horizontal"
            style="@style/OnBoardingTextLight"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/in3days_schedule_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/onboarding_workout_schedule_friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:gravity="center_horizontal"
            style="@style/OnBoardingTextLight"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/in4days_schedule_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_xsmall"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/onboarding_workout_schedule_saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:gravity="center_horizontal"
            style="@style/OnBoardingTextLight"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/in5days_schedule_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/onboarding_workout_schedule_sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:gravity="center_horizontal"
            style="@style/OnBoardingTextLight"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/in6days_schedule_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"/>

        <ImageView
            android:id="@+id/in6days_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/onboarding_previous_button" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/onboarding_next_button"/>

    </LinearLayout>

</LinearLayout>